# pretty_printers

./: .drone.star  .gitignore  CMakeLists.txt  FindBoostPrettyPrinters.cmake  README.adoc  boost-pretty-printers.jam  build.jam  embed-gdb-extension.py  generate-gdb-header.py  generate-gdb-test-runner.py
.drone/: drone.sh
example/: CMakeLists.txt  build.jam
example/include/example/: all.hpp  gdb_printers.hpp  gdb_printers.py
example/src/: example.cpp
example/test/: CMakeLists.txt  build.jam  printers.cpp
test/: CMakeLists.txt  build.jam  gdb.cpp  gdb.py  kv.cpp  mem_res.cpp  test-embed-gdb-extension.py
test/include/testlib/: all.hpp
util/: run-gdb-tests.py
